@@ -546,7 +546,7 @@
          </layout>
         </widget>
        </item>
-       <item row="5" column="0" colspan="2">
+       <item row="7" column="0" colspan="2">
         <spacer>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -563,6 +563,20 @@
         <widget class="QCheckBox" name="precise_seeking_check">
          <property name="text">
           <string>&amp;Precise seeking</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0" colspan="2">
+        <widget class="Line" name="line_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0" colspan="2">
+        <widget class="QCheckBox" name="reset_stop_check">
+         <property name="text">
+          <string>Pressi&amp;ng the stop button once resets the time position</string>
          </property>
         </widget>
        </item>
@@ -902,6 +916,7 @@
   <tabstop>absolute_seeking_button</tabstop>
   <tabstop>relative_seeking_button</tabstop>
   <tabstop>precise_seeking_check</tabstop>
+  <tabstop>reset_stop_check</tabstop>
   <tabstop>single_instance_check</tabstop>
   <tabstop>floating_animated_check</tabstop>
   <tabstop>floating_width_slider</tabstop>
